--- a/src/components/Works/Right/Right.module.css
+++ b/src/components/Works/Right/Right.module.css
@@ -92,7 +92,9 @@
 }
 
 @media (max-width: 1250px) {
-    .right {}
+    .right {
+        padding-bottom: 32px;
+    }
 
     .right .imageContainer {
         width: 100%;
